@@ -65,6 +65,8 @@ public class Market {
     private IOfferApprovalRepository offerApprovalRepository=new OfferApprovalDAO();
     private IBidRepository bidRepository = new BidDAO();
     private IPurchaseRepository purchaseRepository = new PurchaseDAO();
+    private IPaymantRepo paymantRepo=new PaymentDAO();
+    private ISupplyRepo supplyRepo=new SupplyDAO();
 
     private String path;
     public Market(String path, Boolean isTestMode)  {
@@ -97,6 +99,8 @@ public class Market {
     }
     @Transactional
     public void clearAllData(){
+        paymantRepo.clear();
+        supplyRepo.clear();
         bidRepository.clear();
         offerApprovalRepository.clear();
         offerRepository.clear();
@@ -114,6 +118,7 @@ public class Market {
         discountRepo.clear();
         stores.clear();
         systemManagers.clear();
+        new PurchaseProductDAO().clear();
     }
     public StoreDTO getStoreByName(String sessionId, String storeName) throws Exception {
         isMarketOpen();
@@ -195,7 +200,7 @@ public class Market {
                         try {
                             sessionId = sessionManager.getSessionIdByGuestName(args[0]);
                             storeId = getStoreByName(sessionId, args[1]).getStoreId();
-                            addProduct(sessionId,storeId,args[2],Double.parseDouble(args[3]),args[4],Integer.parseInt(args[5]),args[6], ProductDTO.PurchaseType.OFFER);
+                            addProduct(sessionId,storeId,args[2],Double.parseDouble(args[3]),args[4],Integer.parseInt(args[5]),args[6], ProductDTO.PurchaseType.BUY_IT_NOW);
                         }
                         catch (Exception e) {
                         throw new RuntimeException(e);
@@ -1375,7 +1380,10 @@ public class Market {
     public List<PurchaseDTO> getUserPurchaseHistory(String sessionId) throws Exception {
         isMarketOpen();
         Guest m = sessionManager.getSession(sessionId);
-        return m.getPurchaseHistory().getAllPurchases().stream().map(PurchaseDTO::new).collect(Collectors.toList());
+        List<Purchase> lst=m.getPurchaseHistory().getAllPurchases().stream().filter(purchase -> purchase.getUsername().equals(m.getUsername())).toList();
+        for(Purchase p: lst)
+            p.getProductList().addAll(new PurchaseProductDAO().getAllPurchaseProducts().stream().filter(purchaseProduct -> purchaseProduct.getPurchaseId() == p.getId()).toList());
+        return lst.stream().map(PurchaseDTO::new).collect(Collectors.toList());
     }
     private void  testModeSupplySystem(boolean flag) {
         if (flag)
